@startuml

class Individu << Entity >> {
  - id: Bigint
  - login : String
  - mdp : String
  - nom: String
  - prenom: String
  - civilite: String
  - code_synchro: String
  - telephoneMobile: String
  - telephoneFixe: String
  - email: String
  + getters() et setters()
  + equals()
  + hashCode()
  + toString()
}


class Eleve << Entity >> {
   - naissance
   + getters() et setters()
   + equals()
   + hashCode()
   + toString()
}


class Professeur << Entity >> {
   - poste
   + getters() et setters()
   + equals()
   + hashCode()
   + toString()
}


class Professionnel << Entity >> {
   - fonction
   + getters() et setters()
   + equals()
   + hashCode()
   + toString()
}

class Division << Entity >> {
   - id: Bigint
   - code: String
   - libelle: String
   + getters() et setters()
   + equals()
   + hashCode()
   + toString()
}

class Niveau << Entity >> {
   - id: Bigint
   - code: String
   - niveauCourt: String
   - niveauLong: String
   + getters() et setters()
   + equals()
   + hashCode()
   + toString()
}

class Discipline << Entity >> {
   - id: Bigint
   - code: String
   - libelle: String
   + getters() et setters()
   + equals()
   + hashCode()
   + toString()
}


class Stage << Entitiy >> {
   - id
   - dateDebut
   - dateFin
   + getters() et setters()
   + equals()
   + hashCode()
   + toString()
}

class Entreprise << Entitiy >> {
   - id
   + getters() et setters()
   + equals()
   + hashCode()
   + toString()
}

class Visite << Entitiy >> {
   - id
   + getters() et setters()
   + equals()
   + hashCode()
   + toString()
}


hide circle
hide methods
Professeur " * " -left-- " * " Division
Eleve "1" -- "*" Stage
Eleve "*" -- " * " Division
Stage "*" -left-- "1 referent" Professeur : "                  "
Stage "*" -- "1 suivi" Professeur : "   "
Stage "*" -- "responsable 1" Professionnel
Stage "*" -- "1 tuteur" Professionnel
Stage "*" -- "1 lieu" Entreprise:"  "
Stage "1  " -- "*" Visite
Professeur "1" -- " *  " Visite
Professeur " * " -- " * " Discipline

Division "*" -up- "0..1" Niveau
Professionnel "0..*" -left-- "0..1" Entreprise:"                 "
Division " *  " -- "*" Stage
Individu <|-- Eleve
Individu <|-- Professeur
Individu <|-- Professionnel
@enduml

